samples/_failures_safe/1761454663_3c9b4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caec5dbd.c: In function ‘main’:
./samples/SAFE/__tmp_caec5dbd.c:169:12: error: missing terminating " character
  169 |     printf("Enter text
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_caec5dbd.c:169:5: error: expected expression at end of input
  169 |     printf("Enter text
      |     ^~~~~~
./samples/SAFE/__tmp_caec5dbd.c:169:5: error: expected declaration or statement at end of input
